[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/Assets/PlayerGUI_CheckboxStandard_Box_Normal.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/Assets/PlayerGUI_CheckboxStandard_Box_Hovered.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/Assets/PlayerGUI_CheckboxStandard_Box_Disabled.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/PlayerGUI_CheckboxStandard.gd" type="Script" id=4]

[node name="PlayerGUI_CheckboxStandard" type="MarginContainer"]
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Button" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="StatusPic" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
